# Bharat_Traders

./: .env.example  .gitignore  README.md  docker-compose.yml  railway.json  render.yaml
backend/: .env.production  Dockerfile  fyers_test.py  pyproject.toml
backend/app/: auth.py  db.py  main.py
backend/app/core/: config.py
backend/app/routers/: __init__.py  fyers.py  health.py  option_chain.py  watchlist.py
backend/app/schemas/: option_chain.py  user.py  watchlist.py
backend/app/services/: broadcaster.py  fyers.py  in_memory_redis.py  indstocks.py  option_chain_service.py  poller.py
backend/nifty50_option_chain_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tmp_fyers/: fyers_apiv3-3.1.11-py3-none-any.whl
backend/tmp_fyers/fyers_apiv3_wheel/fyers_apiv3-3.1.11.dist-info/: RECORD
frontend/: .env.production  Dockerfile  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: index.css  main.tsx
frontend/src/app/: App.tsx  theme-provider.tsx
frontend/src/components/: dashboard-header.tsx  market-overview.tsx  option-chain-table.tsx  range-selector.tsx  selection-summary-bar.tsx  theme-toggle.tsx
frontend/src/hooks/: useDebouncedWindowSize.ts  useOptionChainSocket.ts  useRangeSelection.ts
frontend/src/lib/: api.ts  format.ts
frontend/src/store/: useDashboardStore.ts
frontend/src/types/: index.ts
frontend/src/workers/: sumWorker.ts  useSelectionWorker.ts
(+4 files in other folders)
